[workspace]
members = [
  "common",
  "day1-1",
  "day1-2",
  "day2-1",
  "day2-2",
  "day3-1",
  "day3-2",
  "day4-1",
  "day4-2",
  "day5-1",
  "day5-2",
  "day6-1",
  "day6-2",
  "day7-1",
  "day7-2",
  "day8-1",
  "day8-2",
  "day9-1",
  "day9-2",
  "day10-1",
  "day10-2",
  "day11-1",
  "day11-2",
  "day12-1",
  "day12-2",
]
